[package]
name = "bananapeel"
version = "0.1.1"
edition = "2021"
description = "A darn-slippery obfuscator algorithm!"
authors = ["arctic-hen7 <arctic.hen@pm.me>"]
license = "MIT"
repository = "https://github.com/arctic-hen7/bananapeel"
readme = "README.md"
keywords = [ "obfuscation", "encoding", "bananapeel" ]
categories = [ "algorithms", "cryptography", "encoding" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = "0.2"
base64 = "0.21"
hex = "0.4"
thiserror = "1"
clap = { version = "4", features = [ "derive" ] }
fmterr = "0.1"

[[bin]]
name = "bananapeel"
path = "src/bin/cli.rs"
